# controller/admin/guidelinePages/create.js
@@ -1,0 +1,35 @@
+const GuidelinePages = require("../../../model/common/guidelinePages");
+const { handleException } = require("../../../helper/exception");
+const Response = require("../../../helper/response");
+const {
+  STATUS_CODE,
+  ERROR_MSGS,
+  INFO_MSGS,
+} = require("../../../helper/constant");
+
+const create = async (req, res) => {
+  const { logger, body } = req;
+  try {
+    let saveData = await GuidelinePages.create(body);
+
+    const statusCode = saveData ? STATUS_CODE.CREATED : STATUS_CODE.BAD_REQUEST;
+    const message = saveData
+      ? INFO_MSGS.CREATED_SUCCESSFULLY
+      : ERROR_MSGS.CREATE_ERR;
+
+    return Response[statusCode === STATUS_CODE.OK ? "success" : "error"]({
+      req,
+      res,
+      status: statusCode,
+      msg: message,
+      data: saveData || null,
+    });
+  } catch (error) {
+    console.error("error:", error);
+    return handleException(logger, res, error);
+  }
+};
+
+module.exports = {
+  create,
+};
