# controller/admin/guidelinePages/update.js
@@ -1,0 +1,34 @@
+const GuidelinePages = require("../../../model/common/guidelinePages");
+const { handleException } = require("../../../helper/exception");
+const Response = require("../../../helper/response");
+const {
+  STATUS_CODE,
+  ERROR_MSGS,
+  INFO_MSGS,
+} = require("../../../helper/constant");
+
+const update = async (req, res) => {
+  const { logger, params, body } = req;
+  try {
+    const { id } = params;
+
+    const updatedData = await GuidelinePages.findByIdAndUpdate(id, body, {
+      new: true,
+    });
+
+    return Response.success({
+      req,
+      res,
+      status: STATUS_CODE.OK,
+      msg: INFO_MSGS.UPDATED_SUCCESSFULLY,
+      data: updatedData,
+    });
+  } catch (error) {
+    console.error("Error :", error);
+    return handleException(logger, res, error);
+  }
+};
+
+module.exports = {
+  update,
+};
