# controller/common/guidelinePages/fetchGuidelinePages.js
@@ -1,0 +1,36 @@
+const GuidelinePages = require("../../../model/common/guidelinePages");
+const { handleException } = require("../../../helper/exception");
+const Response = require("../../../helper/response");
+const {
+  STATUS_CODE,
+  ERROR_MSGS,
+  INFO_MSGS,
+} = require("../../../helper/constant");
+
+const fetchGuidelinePages = async (req, res) => {
+  let { logger, params } = req;
+  try {
+    const { type } = params;
+    const role = type[0].toUpperCase() + type.slice(1).toLowerCase();
+
+    let getData = await GuidelinePages.find({ role });
+
+    const statusCode = getData ? STATUS_CODE.OK : STATUS_CODE.OK;
+    const message = getData ? INFO_MSGS.SUCCESS : ERROR_MSGS.DATA_NOT_FOUND;
+
+    return Response[statusCode === STATUS_CODE.OK ? "success" : "error"]({
+      req,
+      res,
+      status: statusCode,
+      msg: message,
+      data: getData,
+    });
+  } catch (error) {
+    console.error("error-->", error);
+    return handleException(logger, res, error);
+  }
+};
+
+module.exports = {
+  fetchGuidelinePages,
+};
