# routes/common/router.js
@@ -7,6 +7,7 @@ const bennersRoute = require("./benners");
 const imgDeleteRoute = require("./imgDelete");
 const locatOperatorRoute = require("./locatOperator");
 const qr_Proof_Doc_Route = require("./qr&proof&doc");
+const fetchGuidelinePagesRoute = require("./guidelinePages");
 
 router.get("/", (req, res) => {
   res.status(200).json({ message: "Common routes is working!!" });
@@ -19,5 +20,6 @@ router.use("/qr&proof&doc", qr_Proof_Doc_Route);
 router.use("/benners", bennersRoute);
 router.use("/imgDelete", imgDeleteRoute);
 router.use("/locat/operator", locatOperatorRoute);
+router.use("/guidelinePages", fetchGuidelinePagesRoute);
 
 module.exports = router;
